# alpha-research-stack

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: akshare_provider_notes.md  alphasift_reuse_plan.md  architecture.md  data_contract.md  open_source_stack_audit.md  progress.md  provider_probe_plan.md  reuse_decisions.md  tushare_provider_notes.md  vectorbt_reuse_plan.md
orchestrator/: __init__.py
scripts/: benchmark_candidate_engines.py  build_candidate_validation_links.py  build_provider_evidence.py  build_verified_daily_bar_panel.py  check_qlib_data_feasibility.py  compare_akshare_tushare.py  dev_check.sh  diagnose_akshare_daily.py  probe_akshare.py  probe_data_sources.py  probe_tushare.py  push_to_github.sh  run_alphasift_no_llm_validation.py  run_vectorbt_event_baseline.py  validate_alphasift_reuse.py  validate_qlib_runtime_read.py
tests/: test_akshare_probe_script.py  test_akshare_provider_mapping.py  test_alphasift_adapter.py  test_alphasift_reuse_validation.py  test_alphasift_runtime_validation.py  test_candidate_engine_benchmark.py  test_candidate_engine_registry.py  test_candidate_evidence.py  test_candidate_ledger.py  test_candidate_validation_linkage.py  test_candidate_validation_linkage_script.py  test_cross_source_comparison.py  test_daily_bar_panel.py  test_data_contracts.py  test_data_quality_gate.py  test_domain_gate.py  test_evidence_ledger.py  test_provider_evidence.py  test_provider_probe.py  test_qlib_adapter.py  test_qlib_data_feasibility.py  (+10 more)
(+54 files in other folders)
