[project]
name = "alpha-research-stack"
version = "0.1.0"
requires-python = ">=3.11"
description = "Research infrastructure for high-confidence long/short signal workflows."

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
